[package]
name = "axum-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
lazy-regex = "3.4.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.6.2", features = ["fs"] }

[dev-dependencies]
anyhow = "1.0.97"
httpc-test = "0.1.10"
